Update version-stamps so that oas3 stamp is wrapped in Ori to avoid awkard nesting

--- a/src/style/_information.scss
+++ b/src/style/_information.scss
@@ -57,6 +57,15 @@
     }
 }
 
+.info__version-stamp {
+    display: flex;
+    margin-top: 1em;
+
+    > * {
+        margin-right: .5em;
+    }
+}
+
 .info__header__icon
 {
     font-size: $xl-text-font-size;
